# pbl-project-pensieve

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pensieve.db  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py  schemas.py
backend/app/api/routes/: auth.py  concepts.py  entries.py  reflections.py
backend/app/core/: auth.py  config.py  database.py  encryption.py
backend/app/ml/: emotion_detector.py  linguistic_analyzer.py  temporal_tracker.py  theme_clusterer.py
backend/app/models/: database.py
backend/app/services/: reflection_engine.py
backend/scripts/: init_db.py
data/: concepts.json
docs/: architecture.md  ml-pipeline.md
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/auth/login/: page.tsx
frontend/src/app/auth/register/: page.tsx
frontend/src/app/patterns/: page.tsx
frontend/src/app/reflections/: page.tsx
frontend/src/components/: EmptyState.tsx  HolographicBrain.tsx  HolographicBrainClient.tsx  Navigation.tsx  ReflectionCard.tsx
frontend/src/lib/: api.ts  store.ts
nginx/: nginx.conf
schemas/: schema.sql
scripts/: populate_concepts.py
